--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-deployer-ali-oss": "^1.0.0",
     "hexo-deployer-aliyun-oss": "0.0.4",
     "hexo-deployer-cos-cdn": "^1.7.1",
+    "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
