Signed-off-by: lizihan <451447840@qq.com>

--- a/.workflow/master-pipeline.yml
+++ b/.workflow/master-pipeline.yml
@@ -29,6 +29,7 @@ stages:
           - npm install
           - npm install hexo-deployer-git --save
           - npm i hexo-generator-json-content --save
+          - npm install https://github.com/CodeFalling/hexo-asset-image -- save
           - git config --global user.email "451447840@qq.com"
           - git config --global user.name "luoyezadi"
           - npm run config deploy.repo $REPO
