--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "hexo": "^5.0.0",
+    "hexo-asset-image": "github:CodeFalling/hexo-asset-image",
     "hexo-deployer-ali-oss": "^1.0.0",
     "hexo-deployer-aliyun-oss": "0.0.4",
     "hexo-deployer-cos-cdn": "^1.7.1",
@@ -27,6 +28,7 @@
     "hexo-renderer-marked": "^3.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "save": "^2.9.0"
   }
 }
