--- a/.workflow/master-pipeline.yml
+++ b/.workflow/master-pipeline.yml
@@ -21,6 +21,7 @@ stages:
         displayName: Nodejs 构建
         nodeVersion: 14.16.0
         commands:
+          - npm config set registry https://registry.npm.taobao.org 
           - npm install && rm -rf ./public
           - ''
           - npm install hexo-cli -g
