--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,7 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://yoursite.com
 root: /
-#permalink: :title/:year/:month/:day
-permalink: :title/
+permalink: :title/:year/:month/:day/
 permalink_defaults:
 
 # Directory
