--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-asset-image": "github:CodeFalling/hexo-asset-image",
     "hexo-deployer-cos-cdn": "^1.7.1",
     "hexo-deployer-git": "^3.0.0",
+    "hexo-filter-mermaid-diagrams": "^1.0.5",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
@@ -25,6 +26,7 @@
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^3.0.0",
     "hexo-renderer-stylus": "^2.0.0",
+    "hexo-renderer-swig": "^2.0.0",
     "hexo-server": "^2.0.0",
     "hexo-theme-landscape": "^0.0.3",
     "save": "^2.9.0"
